--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
     "no-continue": "off",
     "func-names": "off",
     "no-alert": "off",
-    "no-nested-ternary": "off"
+    "no-nested-ternary": "off",
+    "react/react-in-jsx-scope": "off"
   }
 }
