--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/react-virtualized": "^9.21.22",
+    "@types/styled-components": "5.1.27",
     "@typescript-eslint/eslint-plugin": "6.1.0",
     "@typescript-eslint/parser": "6.1.0",
     "dotenv-webpack": "8.0.1",
@@ -22,10 +24,12 @@
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "2.28.1",
+    "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-react": "7.32.2",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "5.5.3",
     "prettier": "3.0.2",
+    "react-virtualized": "9.22.5",
     "terser-webpack-plugin": "5.3.9",
     "ts-loader": "9.4.4",
     "typescript": "5.1.6",
@@ -38,7 +42,9 @@
     "@reduxjs/toolkit": "1.9.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "8.1.2",
-    "react-router-dom": "6.14.2"
+    "react-router-dom": "6.14.2",
+    "styled-components": "6.0.8"
   }
 }
